--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -1,5 +1,5 @@
 button {
-    margin: 0 1em 1em 1em;
+    margin: 0.5em 0;
     padding: 0.5em;
     border: 0;
     border-radius: 10px;
@@ -14,10 +14,6 @@ button:hover {
     cursor: pointer;
 }
 
-.priority-button {
-    width: 50%;
-}
-
 .secondary-button {
     border: 1px solid #000;
     background: white;
@@ -25,11 +21,44 @@ button:hover {
 }
 
 input {
-    margin: 0 1em 1em 1em;
+    margin: 0.5em 0;
     padding: 0.5em 2em;
     background: #F3F1F1;
     border: 0;
     line-height: 3.5em;
     width: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+.file-input::before {
+    content: "Cover: "
+}
+
+input::file-selector-button {
+    display: none;
+}
+
+select {
+    appearance: none;
+    -webkit-appearance: none;
+    margin: 0.5em 0;
+    padding: 0.5em 2em;
+    background: #F3F1F1;
+    border: 0;
+    height: 4.5em;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+}
+
+textarea {
+    margin: 0.5em 0;
+    padding: 1.5em 2em;
+    background: #F3F1F1;
+    border: 0;
+    max-width: 100%;
+    min-width: 100%;
+    height: 8em;
+    max-height: 8em;
+    min-height: 4em;
+    height: 8em;
 }
