--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,3 +5,19 @@
     margin: 0;
     padding: 0;
 }
+
+:root {
+  --gray-color-app: #EDECEC;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+.hide-element {
+  display: none;
+}
