--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,6 +1,7 @@
 @import url('/public/css/index.css');
 @import url('/public/css/nav.css');
 @import url('/public/css/footer.css');
+@import url('/public/css/buttons.css');
 
 body {
     position: relative;
@@ -10,20 +11,163 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
-
-.container {
-    height: 100vh;
-}
-
+  
 main {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    min-height: calc(100vh - 80px);
+    background-color: white;
+    margin-top: 80px;
+}
+  
+main h1 {
+    font-size: 3em;
+    font-weight: bold;
+    margin-top: 0.5em;
+}
+
+.search-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 60%;
+}
+  
+input {
+    width: 30%;
+    line-height: 2.5em;
+    border-radius: 10px;
+}
+
+.search-bar button {
+    width: 8%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 3.5em;
+}
+
+select {
+    width: 25%;
+    height: 3.5em;
+    border-radius: 10px;
+}
+
+.search-bar-select-section {
+    width: 54%;
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+}
+
+.search-bar-select-section select {
+    width: 50%;
+    height: 3.5em;
+    border-radius: 10px;
+}
+
+/* table styles */
+table {
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    border-spacing: 0;
+    width: 80%;
+}
+
+th {
+    padding: 1em;
+}
+
+th.text {
+    color: white;
+    background-color: black;
+}
+
+th {
     background-color: white;
 }
 
-main > h1 {
-    margin-bottom: 1em;
+td {
+    text-align: center;
+    padding: 0 1em;
+    max-width: 50%;
+    font-size: 0.8em;
+}
+
+table button {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+tr:nth-child(odd) {
+    background-color: #F1EFEF;
+}
+
+tr:nth-child(odd) button {
+    background-color: #F1EFEF;
+}
+
+@media only screen and (min-width: 2499px) {
+    input {
+        font-size: 1.2em;
+    }
+
+    .search-bar button {
+        font-size: 1.2em;
+    }
+
+    select {
+        font-size: 1.2em;
+    }
+
+    .search-bar-select-section select {
+        font-size: 1.2em;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    main h1 {
+        font-size: 2em;
+        font-weight: bold;
+        margin-top: 1em;
+    }
+
+    .search-bar {
+        flex-direction: column;
+        width: 80%;
+    }
+
+    input {
+        width: 100%;
+    }
+
+    .search-bar button {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 3.5em;
+    }
+
+    select {
+        width: 50%;
+        height: 3.5em;
+        border-radius: 10px;
+    }
+
+    .search-bar-select-section {
+        width: 100%;
+        gap: 1em;
+    }
+
+    .search-bar-select-section select {
+        width: 50%;
+    }
 }
