--- a/public/css/addEditBookPage.css
+++ b/public/css/addEditBookPage.css
@@ -21,12 +21,14 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 80px);
     background-color: white;
+    margin-top: 100px;
 }
 
 main > h1 {
     margin-bottom: 1em;
+    text-align: center;
 }
 
 form {
@@ -36,6 +38,7 @@ form {
     justify-content: center;
     align-items: center;
     width: 50%;
+    margin-bottom: 2em;
 }
 
 @media only screen and (max-width: 992px) {
